Bug 490308 - Cannot remove multiple entries from Recent Documents at once
Summary: Cannot remove multiple entries from Recent Documents at once
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 24.05.2
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: ---
Assignee: Waqar Ahmed
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-07-15 14:40 UTC by Abi T.
Modified: 2024-07-19 11:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Abi T. 2024-07-15 14:40:15 UTC
SUMMARY
Trying to remove multiple entries from the Recent Documents (and Projects) menu from Kate (or KWrite, for that manner) only succeeds in removing the last selected entry from the menu.

STEPS TO REPRODUCE
1. Open multiple files in Kate (or KWrite)
2. Close all files to show the Welcome screen
3. Select multiple entries in the Recent Documents (and Projects) menu
4. Right-click the entries and click "Remove"

OBSERVED RESULT
All selected files would be removed from the menu

EXPECTED RESULT
Only the last selected file is removed from the menu

SOFTWARE/OS VERSIONS
Fedora 40 Workstation - KDE Plasma Spin 
KDE Plasma 6.1.2
KDE Frameworks 6.3.0
Qt Version 6.7.2
Comment 1 Bug Janitor Service 2024-07-17 11:56:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1542
Comment 2 Waqar Ahmed 2024-07-18 13:25:06 UTC
Git commit 3fc805c50b4f04065c811804c3e027c769068110 by Waqar Ahmed.
Committed on 17/07/2024 at 11:55.
Pushed by waqar into branch 'master'.

Allow removing multiple items from welcome page

M  +7    -3    apps/lib/welcomeview/welcomeview.cpp

https://invent.kde.org/utilities/kate/-/commit/3fc805c50b4f04065c811804c3e027c769068110
Comment 3 Waqar Ahmed 2024-07-19 11:16:16 UTC
Git commit 09b8df68ce08124a4d4c22d90797a0f93af256d8 by Waqar Ahmed.
Committed on 19/07/2024 at 11:15.
Pushed by waqar into branch 'release/24.05'.

Allow removing multiple items from welcome page
(cherry picked from commit 3fc805c50b4f04065c811804c3e027c769068110)

M  +7    -3    apps/lib/welcomeview/welcomeview.cpp

https://invent.kde.org/utilities/kate/-/commit/09b8df68ce08124a4d4c22d90797a0f93af256d8