Allow removing multiple items from welcome page

BUG: 490308