apps/lib/welcomeview/welcomeview.cpp
@@ -273,10 +273,14 @@ void WelcomeView::onRecentItemsContextMenuRequested(const QPoint &pos)
 
     action = new QAction(i18n("&Remove"), this);
     action->setIcon(QIcon::fromTheme(QStringLiteral("edit-delete")));
-    connect(action, &QAction::triggered, this, [this, url]() {
+    connect(action, &QAction::triggered, this, [this, selectedIndexes]() {
         KRecentFilesAction *recentFilesAction = m_viewManager->mainWindow()->recentFilesAction();
-        recentFilesAction->removeUrl(url);
-        m_recentItemsModel->refresh(recentFilesAction->urls());
+        for (const auto &index : selectedIndexes) {
+            const auto url = m_recentItemsModel->url(index);
+            if (url.isValid()) {
+                recentFilesAction->removeUrl(url);
+            }
+        }
     });
     contextMenu.addAction(action);
 
